--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ openai>=1.0.0
 pdfplumber>=0.10.0
 python-docx>=1.1.0
 Pillow>=10.0.0
+pytesseract>=0.3.10
 
 # Production Server (optional)
 gunicorn>=21.2.0
